Workaround for project dropdown bug (height cut off on mobile)

--- a/app/assets/stylesheets/content/menus/_project_autocompletion.sass
+++ b/app/assets/stylesheets/content/menus/_project_autocompletion.sass
@@ -1,9 +1,26 @@
 #project-search-container
   position: relative
 
+  project-menu-autocomplete
+    display: block
+    max-height: inherit
+
+    .project-menu-autocomplete--wrapper
+      display: flex
+      flex-direction: column
+      max-height: inherit
+
+#project-search-container:nth-child(3)
+  // Substract header height and the two project menu items ("view all", "create new")
+  max-height: calc(100vh - #{$header-height} - 2 * 42px)
+#project-search-container:nth-child(2)
+  // Substract header height and the project menu item ("view all")
+  max-height: calc(100vh - #{$header-height} - 42px)
 
 .project-search-results
   position: relative
+  overflow: hidden
+  max-height: inherit
   width: 400px
   background: white
   // Avoid scrolling body when autocompleter is at bottom
@@ -78,7 +95,6 @@
     // Borders to complete the menu look
     border-right: 1px solid $header-drop-down-border-color
     border-left: 1px solid $header-drop-down-border-color
-
     @include styled-scroll-bar
 
   // Cut off result element width
